Added some comments concerning the draft modes.

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -4,7 +4,8 @@
 # the first one with the development variables needed.
 #
 # Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
+# Use the --drafts flag to show draft posts
+# Use the --unpublished flag to show posts and pages marked as unpublished (published: false in the front matter). 
 
 url: 'http://localhost:4000'
 urlimg: 'http://localhost:4000/images/'
-
