--- a/_data/supporter.yml
+++ b/_data/supporter.yml
@@ -21,6 +21,15 @@ zamg:
         - 2024
         - 2025
         - 2026
+
+stadtgemeinde_hainburg:
+    name: Stadtgemeinde Hainburg
+    url: https://www.hainburg-donau.gv.at/
+    logo: stadtgemeinde_hainburg_wappen.jpg
+    logo_footer: stadtgemeinde_hainburg_wappen.jpg
+    description: Im Jahr 2022 konnten wir die Stadtgemeinde Hainburg als Unterstützerin des MSS Netzwerks gewinnen.
+    sponsoring:
+        - 2022
         
 mertlresearch:
     name: Mertl Research GmbH
